# HITCRT-Vision

./: README.md
HighGUIStudy/: CMakeLists.txt  main.cpp
picture_sticker/: CMakeLists.txt  main.cpp
